Change localStorage key from 'authToken' to 'token'

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -29,7 +29,8 @@
       .then(res => res.json())
       .then(result => {
         if (result.token) {
-          localStorage.setItem("authToken", result.token);
+         
+          localStorage.setItem("token", result.token);
           alert("Login successful");
           window.location.href = "upload.html";
         } else {
