--- a/frontend/pages/upload.html
+++ b/frontend/pages/upload.html
@@ -4,6 +4,11 @@
   <title>Upload</title>
 </head>
 <body>
+
+  <p style="text-align:right;">
+    <a href="#" id="logoutBtn">Logout</a>
+  </p>
+
   <h1>Upload New File</h1>
 
   <input type="file" id="fileInput" required><br><br>
@@ -23,8 +28,16 @@
   </p>
 
   <script>
+    
+    document.getElementById("logoutBtn").onclick = function () {
+      localStorage.removeItem("token");
+      alert("You have been logged out.");
+      window.location.href = "login.html";
+    };
+
+    
     document.getElementById("btnUpload").onclick = function () {
-      const token = localStorage.getItem("authToken");
+      const token = localStorage.getItem("token");
       if (!token) {
         alert("Please login first");
         window.location.href = "login.html";
@@ -41,7 +54,7 @@
       formData.append("file", fileInput.files[0]);
       formData.append("privacy", document.getElementById("privacySelect").value);
 
-      fetch("http://localhost:8000/api/upload", {
+      fetch("http://127.0.0.1:8000/api/upload", {
         method: "POST",
         headers: {
           "Authorization": "Bearer " + token
@@ -55,8 +68,10 @@
         } else {
           alert("File uploaded");
         }
-      });
+      })
+      .catch(() => alert("Network error"));
     };
   </script>
+
 </body>
 </html>
